2006-12-14 [paul]	2.6.1cvs33

	* src/messageview.c
	* src/messageview.h
	* src/mimeview.c
	* src/mimeview.h
	* src/summaryview.c
	* src/textview.c
	* src/textview.h
		Fix printing of selection
		Fix printing of message parts
		Fix printing of images
	* src/gtk/gtksourceprintjob.c
		Fix page count when there are images

2006-12-14 [wwp]	2.6.1cvs32

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/quicksearch.c
		fix quicksearch 'magnify' button status when QS is closed
		using the Escape key, thanks to Colin.

2006-12-14 [wwp]	2.6.1cvs31

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/quicksearch.c
		fix quicksearch 'magnify' button status when QS is closed
		using the Escape key, thanks to Colin.

2006-12-13 [colin]	2.6.1cvs30

	* src/ldapquery.c
	* src/ldaputil.c
		Use the binary safe version of ldap_get_values,
		to make sure we manipulate null-terminated 
		strings. Maybe fixes bug 1075, 'claws mail 
		segfault when completing ldap adresses'
	* src/syldap.c ** REMOVED **
	* src/syldap.h ** REMOVED **
		Remove dead files

2006-12-13 [mones]	2.6.1cvs29

	* po/es.po
		Fixed piped strings, fixed click translation

2006-12-13 [paul]	2.6.1cvs28

	* src/main.c
		don't translate these strings

2006-12-13 [paul]	2.6.1cvs27

	* po/en_GB.po
		updated

2006-12-13 [colin]	2.6.1cvs26

	* src/main.c
	* src/main.h
		Add claws_is_starting()

2006-12-13 [mones]	2.6.1cvs25

	* manual/es/advanced.xml
	* po/es.po
		Synced manual and updated translation

2006-12-12 [colin]	2.6.1cvs24

	* src/wizard.c
		Add an option to use STARTTLS in the
		welcome wizard. Fixes bug 1080, 
		'Using SSL option in wizard for incoming 
		server does not activate SSL with STARTTLS'

2006-12-12 [colin]	2.6.1cvs23

	* src/main.c
		Don't exit when there's an incomplete
		mailbox configured - leaves a chance 
		to fix a failing IMAP account. Exit
		if no mailbox at all is loaded (case
		of missing plugin).
		Completes bug 1077's fix (I was wrong