@@ -2141,3 +2141,4 @@
 ( cvs diff -u -r 1.274.2.157 -r 1.274.2.158 src/mainwindow.c;  cvs diff -u -r 1.395.2.270 -r 1.395.2.271 src/summaryview.c;  cvs diff -u -r 1.68.2.29 -r 1.68.2.30 src/summaryview.h;  cvs diff -u -r 1.1.2.55 -r 1.1.2.56 src/gtk/quicksearch.c;  ) > 2.6.1cvs31.patchset
 ( cvs diff -u -r 1.274.2.157 -r 1.274.2.158 src/mainwindow.c;  cvs diff -u -r 1.395.2.270 -r 1.395.2.271 src/summaryview.c;  cvs diff -u -r 1.68.2.29 -r 1.68.2.30 src/summaryview.h;  cvs diff -u -r 1.1.2.55 -r 1.1.2.56 src/gtk/quicksearch.c;  ) > 2.6.1cvs32.patchset
 ( cvs diff -u -r 1.94.2.111 -r 1.94.2.112 src/messageview.c;  cvs diff -u -r 1.19.2.11 -r 1.19.2.12 src/messageview.h;  cvs diff -u -r 1.83.2.93 -r 1.83.2.94 src/mimeview.c;  cvs diff -u -r 1.20.2.16 -r 1.20.2.17 src/mimeview.h;  cvs diff -u -r 1.395.2.271 -r 1.395.2.272 src/summaryview.c;  cvs diff -u -r 1.96.2.161 -r 1.96.2.162 src/textview.c;  cvs diff -u -r 1.12.2.15 -r 1.12.2.16 src/textview.h;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/gtk/gtksourceprintjob.c;  ) > 2.6.1cvs33.patchset
+( cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/prefs_summaries.c;  cvs diff -u -r 1.1.2.36 -r 1.1.2.37 manual/advanced.xml;  ) > 2.6.1cvs34.patchset
