@@ -1,3 +1,9 @@
+2006-12-14 [paul]	2.6.1cvs34
+
+	* src/prefs_summaries.c
+	* manual/advanced.xml
+		Unhide mark_as_read_delay
+
 2006-12-14 [paul]	2.6.1cvs33
 
 	* src/messageview.c
